# CudaDLInference

./: .gitignore  CMakeLists.txt  README.md
include/: binary_loader.hxx  conv2d_forward.cuh  cudaArray.cuh  cuda_array.cuh  error.cuh  fc_forward.cuh  flatten_forward.cuh  maxpool2d_forward.cuh  network.cuh  relu_forward.cuh
include/layers/: conv2d_forward.cuh  fc_forward.cuh  flatten_forward.cuh  layer.cuh  maxpool2d_forward.cuh  relu_forward.cuh
include/networks/: network_LeNet.cuh
python/: leNetMNIST.py
src/: binary_loader.cu  conv2d_forward.cu  fc_forward.cu  flatten_forward.cu  main.cu  maxpool2d_forward.cu  relu_forward.cu
src/layers/: conv2d_forward.cu  fc_forward.cu  flatten_forward.cu  maxpool2d_forward.cu  relu_forward.cu
src/networks/: network_LeNet.cu
